--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "4.4.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "8.4.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
